# Medical-SAM2

./: pyproject.toml  train_2d.py
func_2d/: function.py  inference.py  utils.py
notebooks/: infer_2d.ipynb  train_2d.ipynb  utils.py
sam2_train/modeling/: sam2_base.py
