#[build-system]
#requires = ["hatchling", "hatch-vcs"]
#build-backend = "hatchling.build"

[project]
name = "sam2_train"
authors = [
    {name = "Saugat Kandel"},
]
description = "Test version of medical-sam2"
readme = "README.md"
#license = {file = "LICENSE.txt"}
#requires-python = ">=3.11"
#classifiers = [
#    "Development Status :: 2 - Pre-Alpha"
#]


# the dynamically determined project metadata attributes
dynamic = ["version"]


# https://hatch.pypa.io/latest/config/metadata/
#[tool.hatch.version]
#source = "vcs"

# https://github.com/charliermarsh/ruff
[tool.ruff]

extend-include = ["*.ipynb"]
extend-exclude = ["*.mrc"]
line-length = 100
fix = true

[tool.ruff.lint]

# https://beta.ruff.rs/docs/rules/
extend-select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",    # pyupgrade
    # "S",    # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "W293", # blank line contains whitespace
]

# I do this to get numpy-style docstrings AND retain
# D417 (Missing argument descriptions in the docstring)
# otherwise, see:
# https://beta.ruff.rs/docs/faq/#does-ruff-support-numpy-or-google-style-docstrings
# https://github.com/charliermarsh/ruff/issues/2606
extend-ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

isort.combine-as-imports = true